--- a/condominiosapp/package.json
+++ b/condominiosapp/package.json
@@ -10,17 +10,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/drawer": "^7.5.2",
     "@react-navigation/native": "^7.1.14",
     "expo": "~53.0.12",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.4",
     "react-native-reanimated": "^3.17.4",
     "react-native-vector-icons": "^10.2.0",
-    "react-dom": "19.0.0",
-    "react-native-web": "^0.20.0",
-    "@expo/metro-runtime": "~5.0.4"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
